adicionando botão feedback

--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
             </div>
         </main>
     </div>
+
+    <a href="https://www.google.com/" class="feedback-link">
+        <i class="fa-solid fa-message"></i>
+    </a>
+
     <div id="popup-canva">
         <div id="popup-rules">
             <div class="rules-header">
@@ -72,6 +77,7 @@
             </div>
         </div>
     </div>
+
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="https://kit.fontawesome.com/d49239e0c9.js" crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
