--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </main>
     </div>
 
-    <a href="https://www.google.com/" class="feedback-link">
+    <a href="https://jordergomes.github.io/feedback/" target="_blank" class="feedback-link">
         <i class="fa-solid fa-message"></i>
     </a>
 
